// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exercise using step data matches snapshot 1`] = `
<div
  className="sc-gsnTZi kTXtGE"
  data-task-step-id={1}
>
  <div
    className="sc-bczRLJ hctMxl exercise-step sc-iBkjds Alzlt"
  >
    <div
      className="sc-dkzDqf ifUCJL"
    >
      <div>
        <div
          className="question-info"
        >
          <span>
            Question 1
          </span>
          <span
            className="num-questions"
          >
             / 
            1
          </span>
          <span
            className="separator"
          >
            |
          </span>
          <span
            className="question-id"
          >
            ID: 
            1234@4
          </span>
        </div>
      </div>
      <div>
        <div
          className="points"
        >
          1.0
           Points
        </div>
      </div>
    </div>
    <div
      className="sc-hKMtZM grRsJk"
    >
      <div
        className="step-card-body exercise-context"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Context",
          }
        }
      />
      <div
        className="step-card-body exercise-stimulus"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<b>Stimulus HTML</b>",
          }
        }
      />
      <div
        data-test-id="student-exercise-question"
      >
        <div
          className="sc-jSMfEi kWGKid openstax-question step-card-body"
          data-question-number={1}
          data-test-id="question"
        >
          <div
            className="answers-table"
          >
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled answer-checked"
                role="region"
              >
                <input
                  checked={true}
                  className="answer-input-box"
                  disabled={true}
                  id="1234@5-option-0"
                  name="1234@5-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="1234@5-option-0"
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Selected Choice a:"
                      className="answer-letter"
                      data-test-id="answer-choice-a"
                      disabled={true}
                      onClick={[Function]}
                    >
                      a
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <span
                      className="answer-content"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "True",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="1234@5-option-1"
                  name="1234@5-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="1234@5-option-1"
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice b:"
                      className="answer-letter"
                      data-test-id="answer-choice-b"
                      disabled={true}
                      onClick={[Function]}
                    >
                      b
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <span
                      className="answer-content"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "False",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
          </div>
        </div>
        <div
          className="sc-gKXOVf kGsBya step-card-footer"
        >
          <div
            className="points"
          >
            <strong>
              Points: 
              1.0
            </strong>
            <span
              className="attempts-left"
            />
          </div>
          <div
            className="controls"
          >
            <button
              className="sc-eCYdqJ dqiaKp"
              data-test-id="continue-btn"
              onClick={[Function]}
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exercise with question state data matches snapshot 1`] = `
<div
  className="sc-gsnTZi kTXtGE"
  data-task-step-id={1}
>
  <div
    className="sc-bczRLJ hctMxl exercise-step sc-iBkjds Alzlt"
  >
    <div
      className="sc-dkzDqf ifUCJL"
    >
      <div>
        <div
          className="question-info"
        >
          <span>
            Question 1
          </span>
          <span
            className="num-questions"
          >
             / 
            1
          </span>
          <span
            className="separator"
          >
            |
          </span>
          <span
            className="question-id"
          >
            ID: 
            1234@5
          </span>
        </div>
      </div>
      <div>
        <div
          className="points"
        >
          1.0
           Points
        </div>
      </div>
    </div>
    <div
      className="sc-hKMtZM grRsJk"
    >
      <div
        className="step-card-body exercise-context"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Context",
          }
        }
      />
      <div
        className="step-card-body exercise-stimulus"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<b>Stimulus HTML</b>",
          }
        }
      />
      <div
        data-test-id="student-exercise-question"
      >
        <div
          className="sc-jSMfEi kWGKid openstax-question step-card-body"
          data-question-number={1}
          data-test-id="question"
        >
          <div
            className="answers-table"
          >
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled answer-checked"
                role="region"
              >
                <input
                  checked={true}
                  className="answer-input-box"
                  disabled={true}
                  id="1-option-0"
                  name="1-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="1-option-0"
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Selected Choice a:"
                      className="answer-letter"
                      data-test-id="answer-choice-a"
                      disabled={true}
                      onClick={[Function]}
                    >
                      a
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <span
                      className="answer-content"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "True",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="1-option-1"
                  name="1-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="1-option-1"
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice b:"
                      className="answer-letter"
                      data-test-id="answer-choice-b"
                      disabled={true}
                      onClick={[Function]}
                    >
                      b
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <span
                      className="answer-content"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "False",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
          </div>
        </div>
        <div
          className="sc-gKXOVf kGsBya step-card-footer"
        >
          <div
            className="points"
          >
            <strong>
              Points: 
              1.0
            </strong>
            <span
              className="attempts-left"
            />
          </div>
          <div
            className="controls"
          >
            <button
              className="sc-eCYdqJ dqiaKp"
              data-test-id="continue-btn"
              onClick={[Function]}
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exercise with question state data shows a detailed solution 1`] = `
<div
  className="sc-gsnTZi kTXtGE"
  data-task-step-id={1}
>
  <div
    className="sc-bczRLJ hctMxl exercise-step sc-iBkjds Alzlt"
  >
    <div
      className="sc-dkzDqf ifUCJL"
    >
      <div>
        <div
          className="question-info"
        >
          <span>
            Question 1
          </span>
          <span
            className="num-questions"
          >
             / 
            1
          </span>
          <span
            className="separator"
          >
            |
          </span>
          <span
            className="question-id"
          >
            ID: 
            1234@5
          </span>
        </div>
      </div>
      <div>
        <div
          className="points"
        >
          1.0
           Points
        </div>
      </div>
    </div>
    <div
      className="sc-hKMtZM grRsJk"
    >
      <div
        className="step-card-body exercise-context"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Context",
          }
        }
      />
      <div
        className="step-card-body exercise-stimulus"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<b>Stimulus HTML</b>",
          }
        }
      />
      <div
        data-test-id="student-exercise-question"
      >
        <div
          className="sc-jSMfEi kWGKid openstax-question step-card-body"
          data-question-number={1}
          data-test-id="question"
        >
          <div
            className="answers-table"
          >
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled answer-checked"
                role="region"
              >
                <input
                  checked={true}
                  className="answer-input-box"
                  disabled={true}
                  id="1-option-0"
                  name="1-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="1-option-0"
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Selected Choice a:"
                      className="answer-letter"
                      data-test-id="answer-choice-a"
                      disabled={true}
                      onClick={[Function]}
                    >
                      a
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <span
                      className="answer-content"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "True",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="1-option-1"
                  name="1-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="1-option-1"
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice b:"
                      className="answer-letter"
                      data-test-id="answer-choice-b"
                      disabled={true}
                      onClick={[Function]}
                    >
                      b
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <span
                      className="answer-content"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "False",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
          </div>
        </div>
        <div
          className="sc-gKXOVf kGsBya step-card-footer"
        >
          <div
            className="points"
          >
            <strong>
              Points: 
              1.0
            </strong>
            <span
              className="attempts-left"
            />
            <div>
              <strong>
                Detailed solution:
              </strong>
               
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Detailed solution",
                  }
                }
              />
            </div>
          </div>
          <div
            className="controls"
          >
            <button
              className="sc-eCYdqJ dqiaKp"
              data-test-id="continue-btn"
              onClick={[Function]}
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
